# retro-game

./: .clippy.toml  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  mise.toml
.cargo/: config.toml
.github/workflow/: release.yml
.github/workflows/: main.yml  release.yml
docs/: architecture.md  building.md  gameplay.md
src/: main.rs  menu.rs
src/engine/: input.rs  loop_.rs  mod.rs  renderer.rs  terminal.rs
src/games/: mod.rs  rand.rs
src/games/bricks/: logic.rs  mod.rs  render.rs  state.rs
src/games/dino/: logic.rs  mod.rs  render.rs  state.rs
src/games/flappy/: logic.rs  mod.rs  render.rs  state.rs
src/games/invaders/: logic.rs  mod.rs  render.rs  state.rs
src/games/minesweeper/: logic.rs  mod.rs  render.rs  state.rs
src/games/pong/: logic.rs  mod.rs  render.rs  state.rs
src/games/runner/: logic.rs  mod.rs  render.rs  state.rs
src/games/snake/: logic.rs  mod.rs  render.rs  state.rs
src/games/tetris/: logic.rs  mod.rs  render.rs  state.rs
src/persistence/: mod.rs  schema.rs  score_db.rs
src/types/: error.rs  game.rs  geometry.rs  mod.rs
src/ui/: components.rs  mod.rs  theme.rs
