[package]
name = "terminal-games"
version = "1.2.0"
edition = "2024"
rust-version = "1.85.0"

[[bin]]
name = "arcade"
path = "src/main.rs"

[dependencies]
crossterm = "0.28"
ratatui = { version = "0.28", default-features = true }
thiserror = "2"
anyhow = "1"

[profile.dev]
opt-level = 0
debug = true
incremental = true
overflow-checks = true

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
overflow-checks = false
panic = "abort"
